<resources>
    <string name="app_name">PIZZA</string>
    <string name="commander">commander</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="mini">Mini</string>
    <string name="maxi">Maxi</string>
    <string name="moyenne">Moyenne</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="fromage">Fromage</string>
    <string name="ton">Ton</string>
    <string name="champignon">champignon</string>
    <string name="todo">TODO</string>
</resources>