<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="20sp"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btncommander"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:text="contact"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btncommander2"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="21dp"
        android:onClick="onClick"
        android:text="@string/commander"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toEndOf="@+id/btncommander"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3"
        tools:ignore="MissingConstraints,UsingOnClickInXml" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="371dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:text="nom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        tools:ignore="MissingConstraints"
        tools:text="nom" />

    <EditText
        android:id="@+id/prenom"
        android:layout_width="371dp"
        android:layout_height="49dp"
        android:text="prenom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nom"
        tools:ignore="MissingConstraints"
        tools:text="prenom" />

    <EditText
        android:id="@+id/Adresse"
        android:layout_width="371dp"
        android:layout_height="49dp"
        android:text="Adresse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prenom"
        tools:ignore="MissingConstraints"
        tools:text="Adresse" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="211dp"
        android:layout_height="153dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="115dp"
        android:layout_height="164dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="52dp">

        <RadioButton
            android:id="@+id/Mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mini" />

        <RadioButton
            android:id="@+id/radioMaxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxi" />

        <RadioButton
            android:id="@+id/Moyenne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moyenne" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:text="Type pizza"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Adresse"
        tools:ignore="MissingConstraints"
        tools:text="Type pizza" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="44dp"
        android:scrollbarSize="20sp"
        android:text="Ingrédients"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/Adresse"
        tools:ignore="MissingConstraints"
        tools:text="Ingrédients " />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fromage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toEndOf="@+id/radioGroup1"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="4dp"
        android:text="@string/ton"
        app:layout_constraintStart_toEndOf="@+id/radioGroup1"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:text="@string/champignon"
        app:layout_constraintStart_toEndOf="@+id/radioGroup1"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>